--- a/splash.css
+++ b/splash.css
@@ -7,20 +7,30 @@ body {
 main {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 300px;
     background-image: url("");
     background-size: 100%;
     font-family: 'Parisienne', cursive;
     font-size: 30px;
     max-width: 800px;
     background: #F0F2F0;
-    padding: 30px 30px 20px 50px;
+    padding: 50px 50px 40px 50px;
     box-shadow: rgb(180, 187, 189, 1) 0 0px 20px -1px;
     -webkit-box-shadow: rgb(185, 185, 185, 1) 0 0px 20px -1px;
     color: rgb(123, 123, 123);
     border-radius: 10px;
-    -webkit-border-radius: 20px;
+    -webkit-border-radius: 40px;
 
+}
+#phone, #location {
+    text-align: center;
+    font-size:
+}
+
+#button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #footer {
